<resources>
    <string name="app_name">Guía Médica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guía Médica</string>
    <string name="nav_header_subtitle">encuentra tu establecimiento de salud</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Salir</string>
    <string name="menu_home">Localiza tu Establecimiento</string>
    <string name="menu_gallery">Busca tu Médico</string>
    <string name="menu_AdminEstablecimientoWeb">Admin Establecimiento</string>
    <string name="menu_slideshow">Ayuda</string>
    <string name="menu_salir">Cerrar</string>
    <string name="sindato">no tiene / no cuenta</string>
    <string name="sindatoNumero">contac/emerg</string>
    <string name="nombreTitle">Nombre</string>
    <string name="tipoTitle">Establecimiento</string>
    <string name="direccionTitle">Dirección</string>
    <string name="img_pageweb">icono de pagina web</string>
    <string name="img_facebook">icono de facebook</string>
    <string name="btn_pagewebEstablecimiento">Página Web</string>
    <string name="btn_facebookEstablecimiento">Facebook</string>
    <string name="numeroAtencionTitle">Atencion</string>
    <string name="WhatssapTitle">Whatssap</string>
    <string name="correoTitle">Correo</string>
    <string name="numEmergenciaTitle">Emergencia</string>
    <string name="licenciaTitle">Licencia</string>
    <string name="descripcionTitle">Descripcion</string>
    <string name="especialidades_doctores">Especialidades y Médicos</string>
    <string name="especialidds_medicas">Especialidades</string>
    <string name="especialidds_medicas_tipoService">Teleconsulta y presencial</string>
    <string name="describir">imagen referencial de establecimiento de salud</string>
    <string name="icono_email">imagen referencial de correo</string>
    <string name="icono_telefono">imagen referencial de telefono</string>
    <string name="icono_whatssap">imagen referencial de whatssap</string>
    <string name="icono_mas">imagen referencial de flecha</string>
    <string name="icon_especialidadd">imagen referencial deacuerdo a la especialidad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_especialidades">Especialidades</string>
    <string name="btn_doctores">Médicos</string>
    <string name="text_horario">Horario de atencion</string>
    <string name="text_horariodescricion">descripcion</string>
    <string name="text_edad">Registro Nacional de Especialista</string>
    <string name="text_NColegiatura">Nº colegiatura</string>
    <string name="text_colegioMedico_peru">Colégio Médico del Perú</string>
    <string name="text_nombre">nombre completo</string>
    <string name="text_precio">precio</string>
    <string name="text_tipodeatencion_sub">Descripcion</string>
    <string name="text_tipodeatencion">descripcion tipo de atencion</string>
    <string name="text_especialidadDoctor">Especialidad</string>
    <string name="text_establecient_trabajo">Establecimiento de trabajo</string>
    <string name="icon_doctor">icono de doctor</string>
    <string name="text_verificarColegiatura">Verificar</string>
    <string name="btn_mostrarHorario">Contáctame</string>
    <string name="btn_ocultarHorario">mostrar menos</string>
    <string name="img_instagram">icono de instagram</string>
    <string name="textGuia">Guía</string>
    <string name="textDe">de</string>
    <string name="textMedica">Médica</string>
    <string name="descripcion_imagen_splash">imagen de medico</string>
    <string name="descripcion_imagen_dialog">icono de localizacion fallida</string>
    <string name="btn_dialog">OK</string>
    <string name="text_dialog">no hay internet…</string>
    <string name="text_dialog_contactame">Contactame..</string>
    <string name="text_dialog_nombre_doc">Nombre doc</string>
    <string name="btn_dialog_cerrar">Cerrar</string>
    <string name="nombre_fragmen_estableci">Establecimiento</string>
    <string name="nombre_fragmen_especialiDoc">Mas información</string>
    <string name="text_19">Covid - 19</string>
    <string name="text_protegete">Como protegerte y proteger a los demá</string>
    <string name="text_vacuna">     Vacúnese</string>
    <string name="img_vacuna">icono vacuna</string>
    <string name="text_mascarilla">Use mascarilla</string>
    <string name="img_mascarilla">icono mascarilla</string>
    <string name="text_labarse">Lavarse las manos frecuentemente</string>
    <string name="img_labarse">icono lavarse</string>
    <string name="text_distancia">Mantener una distancia de 1.5 metros</string>
    <string name="img_distancia">icono distancia</string>
    <string name="text_aglomeraciones">Evite las grandes aglomeraciones y los espacios mal ventilados</string>
    <string name="img_aglomeraciones">icono aglomeraciones</string>
    <string name="text_limpiar">Limpie y desinfecte</string>
    <string name="img_limpiar">icono limpiar</string>
    <string name="text_salud">Monitoree su salud todos los días</string>
    <string name="img_salud">icono salud</string>
    <string name="text_cubrase">Cúbrase la nariz y la boca al toser y estornudar</string>
    <string name="img_cubrirse">icono cubrirse</string>
    <string name="text_vulnerables">Grupos más vulnerables</string>
    <string name="text_hipertencion">Hipertensión arterial.</string>
    <string name="text_deabetes">Diabetes.</string>
    <string name="text_cardiovasculares">Enfermedades cardiovasculares.</string>
    <string name="text_obesidd">Obesidad.</string>
    <string name="text_respiratorias">Enfermedades respiratorias crónicas.</string>
    <string name="text_insuficiencia">Insuficiencia renal crónica.</string>
    <string name="text_cancer">Cáncer.</string>
    <string name="text_inmunosupresores">Enfermedades o tratamientos inmunosupresores.</string>
    <string name="text_mayores">Adultos mayores de 60 años.</string>
    <string name="text_alarma">Signos de alarma</string>
    <string name="text_faltaaire">Sensación de falta de aire o dificultad para respirar.</string>
    <string name="text_fiebre">Fiebre mayor a 38º persistente por más de dos días.</string>
    <string name="text_dolorpecho">Dolor de pecho.</string>
    <string name="text_labios">Coloración azul de los labios (cianosis).</string>
    <string name="text_info1">Informacion sacada de la plataforma web del estado peruano (Minsa)</string>
    <string name="text_info2">https://www.gob.pe/institucion/minsa/campa%C3%B1as/699-conoce-que-es-el-coronavirus-covid-19</string>
    <string name="sear_view">Ingrese especialidad</string>
    <string name="check_box_cheBoxTrue_nombre">nombre</string>
    <string name="check_box_cheBoxTrue_apellido">apelli.</string>
    <string name="iv_voz">icono de microfono</string>
    <string name="error_toas_service_mostrarDoc_all">aun no se registran doctores</string>
    <string name="textView_permisos_uvicacion_subTitle">Permisos De Ubicación</string>
    <string name="textView_permisos_uvicacion">"'Permitir'": para que la aplicación pueda mostrarle su ubicación
        y así poder dibujar la ruta mas corta, que será desde el punto de su ubicación hasta el establecimiento de
        salud seleccionado.<br />
    Usted desidirá cuando activar/desactivar su gps, la aplicacion solo le avisara cuando requiera aquel servicio.</string>
    <string name="textView_miUbicacion">Mostrará su ubicación.<br />
        Éste icono estará en la parte superior derecha del mapa, despues de conceder el permiso de ubicación.</string>
    <string name="textView_permisos_llamada_subTitle">Permisos Para Hacer y Gestionar LLamadas Telefónicas</string>
    <string name="textView_permisos_llamada">"'Permitir'" el servicio para poder darle funcionalidad a la opción de
        llamar al medico  </string>
    <string name="textView_contacta_admin_subTitle">Contáctame</string>
    <string name="textView_admin_correo">Correo:</string>
    <string name="textView_admin_whatssap">Whatssap:</string>
    <string name="textView_contacto_admin">cualquier consulta, recomendacion u inconveniente con la aplicación,
    contactar..</string>
    <string name="textView_alias">Sobrenombre</string>
    <string name="btn_alias_g">Guardar</string>
    <string name="btn_alias_m">Modificar</string>
    <string name="btn_alias_a">Actualizar</string>
    <string name="dialog_general">Problemas Con Internet</string>
    <string name="dialog_webView_important">Tener Encuenta</string>
    <string name="dialog_webView">Cuando salga de esta ventana, cerrará automáticamente la web de administrador..<br />
     Se recomienda abrir la web de administrador desde un navegador de escritorio para el control total de los datos</string>
    <string name="dialog_splashScreem">usted no cuenta con internet para el funcionamiento de esta aplicacion,vuelva mas tarde</string>
    <string name="dialog_splashScreem_permiso_ubicacion">El permiso de ubicación es para que la aplicación
                muestre un botón en la parte superior derecha de la pantalla; Aquel boton
                mostrará su ubicación en el mapa (gracias a eso
                se podra mostrar la ruta de como llegar al
                establecimiento de salud seleccionado); de aceptar,
                la aplicación no tendra acceso a activar o desactivar
                su GPS, solamente le avisara cuando se requiera para que usted lo active. \n
                Por eso es necesario que acepte el permiso de acceso a la ubicacion de este dispositivo</string>
    <string name="dialog_buscarDoc">no cuenta con internet para acceder a este servicio</string>
    <string name="dialog_buscarDoc_voz">Hola, a quién deseas buscar..</string>
    <string name="dialog_buscarDoc_toas">Tú dispositivo no soporta el reconocimiento por voz</string>
    <string name="dialog_buscarDoc_SearVie_Nom">Ingrese nombre</string>
    <string name="dialog_buscarDoc_SearVie_Especi">Ingrese especialidad</string>
    <string name="dialog_buscarDoc_SearVie_Ape">Ingrese apellido</string>
    <string name="aviso_guardar_nameMarker">Problemas para guardar, comuniquese con el Administrador</string>
    <string name="aviso_ingrese_nameMarker">Ingrese sobrenombre</string>
    <string name="aviso_actualizar_nameMarker">Sobrenombre actualizado</string>
    <string name="aviso_toas_activado">GpS activado</string>
    <string name="aviso_toas_desactivado">GpS desactivado</string>
    <string name="spiner_cabecera">Mostrar Sin Filtro</string>
    <string name="aviso_toas_fb_no">No cuenta con Facebook</string>
    <string name="aviso_toas_fb_si">Mostrando Facebook</string>
    <string name="aviso_toas_fb_error">problemas con la dirección de facebook, comuníquese con el Administrador</string>
    <string name="aviso_toas_web_no">No cuenta con Página web</string>
    <string name="aviso_toas_web_si">Mostrando Página Web</string>
    <string name="aviso_toas_web_error">problemas con la dirección web, comuníquese con el Administrador</string>
    <string name="dialog_imagen_internet_no">necesita Internet para cargar la imagen</string>
    <string name="dialog_btnflecha_internet_no">no cuenta con Internet para acceder a este servicio</string>
    <string name="toas_internet_no">No cuenta con internet</string>
    <string name="toas_confir_copy">Copiado al portapapeles</string>
    <string name="toas_problem_especialidades">problemas para mostrar especialidades, comuníquese con el administardor</string>
    <string name="toas_problem_coordenadas">problemas para mostrar establecimientos, comuniquese con el administardor</string>
    <string name="toas_exepcion_coordenadas">problemas - comuniquese con el administrador</string>
    <string name="toas_problem_imagen">no se pudo cargar la imagen - comuniquese con el administrador</string>
</resources>