<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_gallery" />
    </group>
    <group android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_adminEstablecimiento"
            android:icon="@drawable/ic_icons8_administrator_64"
            android:title="@string/menu_AdminEstablecimientoWeb" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/menu_slideshow" />
    </group>
</menu>