<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.especialiddsYDocFragment">

    <Button
        android:id="@+id/btnEspecilaidds"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn_especialidades"
        android:textStyle="bold"
        android:backgroundTint="#283F51B5"
        android:layout_gravity="start"
        android:layout_marginStart="15dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="2dp"
        app:cornerRadius="10dp" />
    <!--app:backgraundTint="@null" importante-->

    <Button
        android:id="@+id/btnDoc"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/btn_doctores"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:cornerRadius="10dp"
        android:elevation="10dp"
        android:stateListAnimator="@null"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="43.3dp"
        android:background="@color/acentuacion_rosa_A700"/>

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contenedorFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:layout_marginTop="45dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/idVistaUnaVez"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/cabecera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_19"
                    android:textAllCaps="true"
                    android:elevation="24dp"
                    android:stateListAnimator="@null"
                    android:textColor="@color/text_primary_fondo_blanco" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSignosAlarma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/text_alarma"
                            android:textColor="@color/text_primary_fondo_blanco" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_faltaaire" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_fiebre"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_dolorpecho"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_labios"
                            android:layout_marginBottom="3dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardComoProtegerte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:id="@+id/vistaCovid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp">
                        <TextView
                            android:id="@+id/cabeceraProtegerte"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center_horizontal"
                            android:text="@string/text_protegete"
                            android:textColor="@color/text_primary_fondo_blanco" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/idvacunaText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_vacuna"
                                android:gravity="center_vertical"
                                android:drawablePadding="10dp"
                                app:drawableStartCompat="@drawable/ic_vacuna_black_24dp" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/idmascarillaText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_mascarilla"
                                android:gravity="center_vertical"
                                android:drawablePadding="10dp"
                                app:drawableStartCompat="@drawable/ic_baseline_masks_24"
                                android:background="?attr/selectableItemBackground"
                                android:clickable="true"
                                android:focusable="true" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/idmanosText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_labarse"
                                android:drawablePadding="10dp"
                                android:gravity="center_vertical"
                                app:drawableStartCompat="@drawable/ic_baseline_clean_hands_24"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/iddistanceText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_distancia"
                                android:gravity="center_vertical"
                                android:drawablePadding="10dp"
                                app:drawableStartCompat="@drawable/ic_social_distance_black_24dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/idaglomeracionText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_aglomeraciones"
                                android:drawablePadding="10dp"
                                android:gravity="center_vertical"
                                app:drawableStartCompat="@drawable/ic_calentamiento"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/iddesinfectarText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/text_limpiar"
                                android:gravity="center_vertical"
                                android:drawablePadding="10dp"
                                app:drawableStartCompat="@drawable/ic_desinfectar_black_24dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/idsaludText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/text_salud"
                                android:drawablePadding="10dp"
                                app:drawableStartCompat="@drawable/ic_salud"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="3dp">
                            <TextView
                                android:id="@+id/idscubracealtoserText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:text="@string/text_cubrase"
                                android:drawablePadding="10dp"
                                app:drawableStartCompat="@drawable/ic_tos"/>

                        </LinearLayout>


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardVulnerables"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_vulnerables"
                            android:layout_marginBottom="5dp"
                            android:textColor="@color/text_primary_fondo_blanco"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_hipertencion" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_deabetes" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_cardiovasculares" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_obesidd" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_respiratorias" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_insuficiencia" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_cancer" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_inmunosupresores" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_mayores"
                            android:layout_marginBottom="3dp"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_info1"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/text_info2"/>
            </LinearLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    <!--</ScrollView>-->

</FrameLayout>